--- a/css/media.css
+++ b/css/media.css
@@ -42,6 +42,7 @@
         height: 100%;
     }
 }
+
 @media (max-width: 992px){
     .last_news__boxes{
         justify-content: center;
@@ -65,6 +66,7 @@
         padding-bottom: 10px;
         border-bottom: 2px solid white;
     }
+}
 
 
 
@@ -240,4 +242,3 @@
         width: 310px;
     }
 }
-
