--- a/css/style.css
+++ b/css/style.css
@@ -449,9 +449,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* padding-left: 60px; */
+    padding: 20px;
     gap: 30px;
-
     position: relative;
 }
 
@@ -528,6 +527,7 @@
     justify-content: center;
     gap: 30px;
     position: relative;
+    padding: 20px;
 }
 
 .right_box::before{
